feat: aggiunto API per leggere/creare/eliminare risorse di DeviceModel
